[package]
name = "langridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde_derive = "1.0"
serde = "1.0"
figment = { version = "0.10", features = ["json", "env"] }
deepl = "0.4"
